--- a/index.html
+++ b/index.html
@@ -2,28 +2,15 @@
 <html>
 
 <head>
-    <title>Responsive</title>
-    <meta charset="utf-8" />
-    <link href="style.css" type="text/css" rel="stylesheet" />
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Responsive-MainPage</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
 <body>
-    <header></header>
-    <div class="main">
-        <div class="header">Header</div>
-        <div class="menus">
-            <div>Menu1</div>
-            <div>Menu2</div>
-            <div>Menu3</div>
-        </div>
-        <div class="columns">
-            <div class="dark-gray">Column1</div>
-            <div class="column2">Column2</div>
-            <div class="dark-blue">Column3</div>
-        </div>
-        <div class="footer">Footer</div>
-    </div>
-
+    <p><a href="./page.html">Without Bootstrap</a></p>
+    <p><a href="./page_b.html">With Bootstrap</a></p>
 </body>
 
 </html>
